wacom issues caused by chrome bug, switched to firefox, changed x and x event values to work on firefox, started making divs to cover the drawing halves

--- a/exquisite-corpse-react/src/Canvas.css
+++ b/exquisite-corpse-react/src/Canvas.css
@@ -13,9 +13,11 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  background: red;
 }
 
 .drawArea {
+  background: white;
   width: 400px;
   height: 400px;
   border: 1px solid black;
